crates/tests/fixtures/harness/data/error/fn_param_name_unique/input.rdl

#[winrt]
mod Test {
    #[library("lib")]
    extern fn F(a: i32, a: i32);
}
        